Fix: Addressed issue with status color not showing on Movie > Details (only purple was working)

--- a/frontend/src/Movie/Details/MovieStatusLabel.css
+++ b/frontend/src/Movie/Details/MovieStatusLabel.css
@@ -8,7 +8,7 @@
   border-left: 4px solid $successColor;
 }
 
-.unreleased {
+.notAvailable {
   padding-left: 2px;
   border-left: 4px solid $primaryColor;
 }
